package br.edu.ifpb.esperanca.eduflow.domain.entities;

public class Administrador {
}
