package br.edu.ifpb.esperanca.eduflow.domain.enums;

public enum StatusAgendamento {
}
